--- a/main.tex
+++ b/main.tex
@@ -17,7 +17,7 @@
 \usepackage{csquotes} % Fortgeschrittene Funktionen für Zitate, für die deutsche Form der Anführungszeichen bei Referenzen
 %\addbibresource{MyBibliography.bib} % Ort der .bib Datei, die die Datenbank für Literatur/Referenzen enthält.
 
-\graphicspath{{images/} {chapters/}}
+\graphicspath{{Bilder/} {images/} {chapters/}}
 
 \DeclareSIUnit{\dBm}{dBm}
 \DeclareSIUnit[per-mode=reciprocal]\WN{\per\centi\meter}
@@ -44,5 +44,5 @@
 \newpage
 %
 %
-
+\section{Einleitung}
 \end{document}
